update entradas salidas para que ponga la fecha

--- a/Larco/Web.config
+++ b/Larco/Web.config
@@ -1,90 +1,89 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <configSections>
-        <section name="loggingConfiguration" type="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.LoggingSettings, Microsoft.Practices.EnterpriseLibrary.Logging, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
-    </configSections>
-    <connectionStrings>
-        <add name="DBConnString" providerName="System.Data.SqlClient" connectionString="SERVER=LP150071W7E64\SQLSERVER2008R2;Initial Catalog=LarcoOld;User Id=LarcoWebUser;Password=Larco.App-WebUser2016;Pooling=true;Min Pool Size=3;Max Pool Size=10" />
-        <!--<add name="DBConnString" providerName="System.Data.SqlClient" connectionString="SERVER=192.168.1.1\compac;Initial Catalog=Larco;User Id=LarcoWebUser;Password=Larco.App-WebUser2016;Pooling=true;Min Pool Size=3;Max Pool Size=10" />-->
-    </connectionStrings>
-    <loggingConfiguration name="Logging Application Block" tracingEnabled="true" defaultCategory="System" logWarningsWhenNoCategoriesMatch="true">
+  <configSections>
+    <section name="loggingConfiguration" type="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.LoggingSettings, Microsoft.Practices.EnterpriseLibrary.Logging, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
+  </configSections>
+  <connectionStrings>
+    <add name="DBConnString" providerName="System.Data.SqlClient" connectionString="SERVER=DELL-CBELTRAN\SQLSERVER2008R2;Initial Catalog=Larco;User Id=LarcoWebUser;Password=Larco.App-WebUser2016;Pooling=true;Min Pool Size=3;Max Pool Size=10" />
+    <!--<add name="DBConnString" providerName="System.Data.SqlClient" connectionString="SERVER=192.168.1.1\compac;Initial Catalog=Larco;User Id=LarcoWebUser;Password=Larco.App-WebUser2016;Pooling=true;Min Pool Size=3;Max Pool Size=10" />-->
+  </connectionStrings>
+  <loggingConfiguration name="Logging Application Block" tracingEnabled="true" defaultCategory="System" logWarningsWhenNoCategoriesMatch="true">
+    <listeners>
+      <add fileName="C:\\Temp\\Logs\\Larco.txt" header="" footer="" formatter="CSV Formatter" listenerDataType="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.FlatFileTraceListenerData, Microsoft.Practices.EnterpriseLibrary.Logging, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" traceOutputOptions="None" filter="All" type="Microsoft.Practices.EnterpriseLibrary.Logging.TraceListeners.FlatFileTraceListener, Microsoft.Practices.EnterpriseLibrary.Logging, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" name="Trace File Trace Listener" />
+    </listeners>
+    <formatters>
+      <add template="{timestamp(local:MM/dd/yyyy HH:mm:ss.fffffff)},&quot;{category}&quot;,&quot;{priority}&quot;,&quot;{message}&quot;,{eventid},&quot;{severity}&quot;,&quot;{title}&quot;,{machine},&quot;{dictionary({value})}&quot;" type="Microsoft.Practices.EnterpriseLibrary.Logging.Formatters.TextFormatter, Microsoft.Practices.EnterpriseLibrary.Logging, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" name="CSV Formatter" />
+    </formatters>
+    <categorySources>
+      <add switchValue="All" name="All Events">
         <listeners>
-            <add fileName="D:\\Temp\\Logs\\Larco.txt" header="" footer="" formatter="CSV Formatter" listenerDataType="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.FlatFileTraceListenerData, Microsoft.Practices.EnterpriseLibrary.Logging, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" traceOutputOptions="None" filter="All" type="Microsoft.Practices.EnterpriseLibrary.Logging.TraceListeners.FlatFileTraceListener, Microsoft.Practices.EnterpriseLibrary.Logging, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" name="Trace File Trace Listener" />
+          <add name="Trace File Trace Listener" />
         </listeners>
-        <formatters>
-            <add template="{timestamp(local:MM/dd/yyyy HH:mm:ss.fffffff)},&quot;{category}&quot;,&quot;{priority}&quot;,&quot;{message}&quot;,{eventid},&quot;{severity}&quot;,&quot;{title}&quot;,{machine},&quot;{dictionary({value})}&quot;" type="Microsoft.Practices.EnterpriseLibrary.Logging.Formatters.TextFormatter, Microsoft.Practices.EnterpriseLibrary.Logging, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" name="CSV Formatter" />
-        </formatters>
-        <categorySources>
-            <add switchValue="All" name="All Events">
-                <listeners>
-                    <add name="Trace File Trace Listener" />
-                </listeners>
-            </add>
-        </categorySources>
-        <specialSources>
-            <allEvents switchValue="All" name="All Events">
-                <listeners>
-                    <add name="Trace File Trace Listener" />
-                </listeners>
-            </allEvents>
-            <errors switchValue="All" name="Logging Errors &amp; Warnings">
-                <listeners>
-                    <add name="Trace File Trace Listener" />
-                </listeners>
-            </errors>
-        </specialSources>
-    </loggingConfiguration>
-    <appSettings>        
-        <add key="AjaxBasePkg" value="BS.Larco.Ajax" />
-        <add key="IPageInfoDAO" value="BS.Common.Dao.Cache.PageCacheDAO, BSFramework" />
-        <add key="ICatalogDAO" value="BS.Common.Dao.Cache.CatalogCacheDAO, BSFramework" />
-        <!--<add key="ICatalogDAO" value="BS.Common.Dao.Sql.CatalogSqlDAO, BSFramework" />-->
-        <add key="PageInfo" value="BS.Common.Ajax.PageInfo, BSFramework" />
-        <add key="LarcoDAO" value="BS.Larco.Dao.Sql.LarcoSqlDAO, Larco" />
-        <add key="CatalogCacheTables" value="tblClientes,tblProductos"/>
-        <add key="EPEFrameworkAppName" value="Larco" />
-        <add key="QueryHelper" value="BS.Common.Ajax.QueryHelper, BSFramework" />        
-    </appSettings>
-    <system.web>
-        <customErrors mode="Off" />
-        <pages buffer="true" validateRequest="true" />
-        <compilation debug="true" targetFramework="4.0" />
-        <authentication mode="Forms">
-            <forms name=".ASPXFORMSDEMO" loginUrl="logon.aspx"
-            protection="All" path="/" timeout="30" />
-        </authentication>
-        <authorization>
-            <deny users ="?" />
-            <allow users = "*" />
-        </authorization>
-        <httpHandlers>
-            <add verb="*" path="*Controller.ashx" type="BS.Common.handler.AjaxController, Larco" />
-            <add verb="*" path="*Handler.ashx" type="BS.Common.handler.AjaxDownloadHandler, Larco" />
-        </httpHandlers>
-        <httpRuntime maxUrlLength="40960" maxQueryStringLength="2097151" maxRequestLength="40960" />
-    </system.web>
-    <system.web.extensions>
-        <scripting>
-            <webServices>
-                <jsonSerialization maxJsonLength="500000000" />
-            </webServices>
-            <scriptResourceHandler enableCompression="true" enableCaching="true" />
-        </scripting>
-    </system.web.extensions>
-    <system.webServer>
-        <handlers>
-            <remove name="AjaxController" />
-            <remove name="AjaxDownloadHandler" />
-            <add name="AjaxController" verb="*" path="*Controller.ashx" type="BS.Common.handler.AjaxController, Larco" />
-            <add name="AjaxDownloadHandler" verb="*" path="*Handler.ashx" type="BS.Common.handler.AjaxDownloadHandler, Larco" />
-        </handlers>
-        <security>
-            <requestFiltering>
-                <requestLimits maxUrl="40960" maxQueryString="2097151" />
-            </requestFiltering>
-        </security>
-        <validation validateIntegratedModeConfiguration="false" />
-    </system.webServer>
+      </add>
+    </categorySources>
+    <specialSources>
+      <allEvents switchValue="All" name="All Events">
+        <listeners>
+          <add name="Trace File Trace Listener" />
+        </listeners>
+      </allEvents>
+      <errors switchValue="All" name="Logging Errors &amp; Warnings">
+        <listeners>
+          <add name="Trace File Trace Listener" />
+        </listeners>
+      </errors>
+    </specialSources>
+  </loggingConfiguration>
+  <appSettings>
+    <add key="AjaxBasePkg" value="BS.Larco.Ajax" />
+    <add key="IPageInfoDAO" value="BS.Common.Dao.Cache.PageCacheDAO, BSFramework" />
+    <add key="ICatalogDAO" value="BS.Common.Dao.Cache.CatalogCacheDAO, BSFramework" />
+    <!--<add key="ICatalogDAO" value="BS.Common.Dao.Sql.CatalogSqlDAO, BSFramework" />-->
+    <add key="PageInfo" value="BS.Common.Ajax.PageInfo, BSFramework" />
+    <add key="LarcoDAO" value="BS.Larco.Dao.Sql.LarcoSqlDAO, Larco" />
+    <add key="CatalogCacheTables" value="tblClientes,tblProductos" />
+    <add key="EPEFrameworkAppName" value="Larco" />
+    <add key="QueryHelper" value="BS.Common.Ajax.QueryHelper, BSFramework" />
+  </appSettings>
+  <system.web>
+    <customErrors mode="Off" />
+    <pages buffer="true" validateRequest="true" />
+    <compilation debug="true" targetFramework="4.0" />
+    <authentication mode="Forms">
+      <forms name=".ASPXFORMSDEMO" loginUrl="logon.aspx" protection="All" path="/" timeout="30" />
+    </authentication>
+    <authorization>
+      <deny users="?" />
+      <allow users="*" />
+    </authorization>
+    <httpHandlers>
+      <add verb="*" path="*Controller.ashx" type="BS.Common.handler.AjaxController, Larco" />
+      <add verb="*" path="*Handler.ashx" type="BS.Common.handler.AjaxDownloadHandler, Larco" />
+    </httpHandlers>
+    <httpRuntime maxUrlLength="40960" maxQueryStringLength="2097151" maxRequestLength="40960" />
+  </system.web>
+  <system.web.extensions>
+    <scripting>
+      <webServices>
+        <jsonSerialization maxJsonLength="500000000" />
+      </webServices>
+      <scriptResourceHandler enableCompression="true" enableCaching="true" />
+    </scripting>
+  </system.web.extensions>
+  <system.webServer>
+    <handlers>
+      <remove name="AjaxController" />
+      <remove name="AjaxDownloadHandler" />
+      <add name="AjaxController" verb="*" path="*Controller.ashx" type="BS.Common.handler.AjaxController, Larco" />
+      <add name="AjaxDownloadHandler" verb="*" path="*Handler.ashx" type="BS.Common.handler.AjaxDownloadHandler, Larco" />
+    </handlers>
+    <security>
+      <requestFiltering>
+        <requestLimits maxUrl="40960" maxQueryString="2097151" />
+      </requestFiltering>
+    </security>
+    <validation validateIntegratedModeConfiguration="false" />
+  </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
