--- a/Larco/Web.config
+++ b/Larco/Web.config
@@ -1,18 +1,18 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
     <section name="loggingConfiguration" type="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.LoggingSettings, Microsoft.Practices.EnterpriseLibrary.Logging, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
   </configSections>
   <connectionStrings>
-    <!--    <add name="DBConnString" providerName="System.Data.SqlClient" connectionString="SERVER=LP150071W7E64\SQLSERVER2008R2;Initial Catalog=LarcoOld;User Id=LarcoWebUser;Password=Larco.App-WebUser2016;Pooling=true;Min Pool Size=3;Max Pool Size=10" /> -->
-    <add name="DBConnString" providerName="System.Data.SqlClient" connectionString="SERVER=192.168.1.1\compac;Initial Catalog=Larco;User Id=LarcoWebUser;Password=Larco.App-WebUser2016;Pooling=true;Min Pool Size=3;Max Pool Size=10" />
+    <add name="DBConnString" providerName="System.Data.SqlClient" connectionString="SERVER=LP150012W7E64\SQLSERVER2012;Initial Catalog=Larco;User Id=LarcoWebUser;Password=Larco.App-WebUser2016;Pooling=true;Min Pool Size=3;Max Pool Size=10" />
+    <!--  <add name="DBConnString" providerName="System.Data.SqlClient" connectionString="SERVER=192.168.1.1\compac;Initial Catalog=Larco;User Id=LarcoWebUser;Password=Larco.App-WebUser2016;Pooling=true;Min Pool Size=3;Max Pool Size=10" /> -->
   </connectionStrings>
   <loggingConfiguration name="Logging Application Block" tracingEnabled="true" defaultCategory="System" logWarningsWhenNoCategoriesMatch="true">
     <listeners>
-      <add fileName="C:\\Temp\\Logs\\Larco.txt" header="" footer="" formatter="CSV Formatter" listenerDataType="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.FlatFileTraceListenerData, Microsoft.Practices.EnterpriseLibrary.Logging, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" traceOutputOptions="None" filter="All" type="Microsoft.Practices.EnterpriseLibrary.Logging.TraceListeners.FlatFileTraceListener, Microsoft.Practices.EnterpriseLibrary.Logging, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" name="Trace File Trace Listener" />
+      <add fileName="D:\\Temp\\Logs\\Larco.txt" header="" footer="" formatter="CSV Formatter" listenerDataType="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.FlatFileTraceListenerData, Microsoft.Practices.EnterpriseLibrary.Logging, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" traceOutputOptions="None" filter="All" type="Microsoft.Practices.EnterpriseLibrary.Logging.TraceListeners.FlatFileTraceListener, Microsoft.Practices.EnterpriseLibrary.Logging, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" name="Trace File Trace Listener" />
     </listeners>
     <formatters>
-      <add template="{timestamp(local:MM/dd/yyyy HH:mm:ss.fffffff)},&quot;{category}&quot;,&quot;{priority}&quot;,&quot;{message}&quot;,{eventid},&quot;{severity}&quot;,&quot;{title}&quot;,{machine},&quot;{dictionary({value})}&quot;" type="Microsoft.Practices.EnterpriseLibrary.Logging.Formatters.TextFormatter, Microsoft.Practices.EnterpriseLibrary.Logging, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" name="CSV Formatter" />
+      <add template="{timestamp(local:MM/dd/yyyy HH:mm:ss.fffffff)}|{category}|{priority}|{message}|{eventid}|{severity}|{title}|{machine}|{dictionary({value})}|{win32ThreadId}|{activity}" type="Microsoft.Practices.EnterpriseLibrary.Logging.Formatters.TextFormatter, Microsoft.Practices.EnterpriseLibrary.Logging, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" name="CSV Formatter" />
     </formatters>
     <categorySources>
       <add switchValue="All" name="All Events">
@@ -36,15 +36,28 @@
   </loggingConfiguration>
   <appSettings>
     <add key="AjaxBasePkg" value="BS.Larco.Ajax" />
-    <add key="IPageInfoDAO" value="BS.Common.Dao.Cache.PageCacheDAO, BSFramework" />
-    <add key="ICatalogDAO" value="BS.Common.Dao.Cache.CatalogCacheDAO, BSFramework" />
-    <!--<add key="ICatalogDAO" value="BS.Common.Dao.Sql.CatalogSqlDAO, BSFramework" />-->
-    <add key="PageInfo" value="BS.Common.Ajax.PageInfo, BSFramework" />
     <add key="LarcoDAO" value="BS.Larco.Dao.Sql.LarcoSqlDAO, Larco" />
+    <add key="IPageInfoDAO" value="EPE.Common.Dao.Cache.PageCacheDAO, EPEFramework" />
+    <add key="ICatalogDAO" value="EPE.Common.Dao.Cache.CatalogCacheDAO, EPEFramework" />
     <add key="CatalogCacheTables" value="tblClientes,tblProductos" />
+    <add key="PageInfo" value="BS.Larco.Ajax.PageInfo, Larco" />
     <add key="EPEFrameworkAppName" value="Larco" />
-    <add key="QueryHelper" value="BS.Common.Ajax.QueryHelper, BSFramework" />
+        
+    <add key="QueryHelper" value="EPE.Common.Ajax.QueryHelper, EPEFramework" />
+    <add key="Users" value="BS.Larco.Ajax.Users, Larco" />
   </appSettings>
+  <system.serviceModel>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="PageServiceSoap" />
+        <binding name="ModulesServiceSoap" />
+      </basicHttpBinding>
+    </bindings>
+    <client>
+      <endpoint address="http://localhost/EPEFrameworkService/PageService.asmx" binding="basicHttpBinding" bindingConfiguration="PageServiceSoap" contract="EPEFrameworkService.PageServiceSoap" name="PageServiceSoap" />
+      <endpoint address="http://localhost/EPEFrameworkService/ModulesService.asmx" binding="basicHttpBinding" bindingConfiguration="ModulesServiceSoap" contract="FrameworkModulesService.ModulesServiceSoap" name="ModulesServiceSoap" />
+    </client>
+  </system.serviceModel>
   <system.web>
     <customErrors mode="Off" />
     <pages buffer="true" validateRequest="true" />
@@ -57,10 +70,11 @@
       <allow users="*" />
     </authorization>
     <httpHandlers>
-      <add verb="*" path="*Controller.ashx" type="BS.Common.handler.AjaxController, Larco" />
-      <add verb="*" path="*Handler.ashx" type="BS.Common.handler.AjaxDownloadHandler, Larco" />
+      <add verb="*" path="*Controller.ashx" type="EPE.Common.handler.AjaxController, Larco" />
+      <add verb="*" path="*Handler.ashx" type="EPE.Common.handler.AjaxDownloadHandler, Larco" />
     </httpHandlers>
     <httpRuntime maxUrlLength="40960" maxQueryStringLength="2097151" maxRequestLength="40960" />
+    <sessionState mode="InProc" timeout="20"></sessionState>
   </system.web>
   <system.web.extensions>
     <scripting>
@@ -74,8 +88,8 @@
     <handlers>
       <remove name="AjaxController" />
       <remove name="AjaxDownloadHandler" />
-      <add name="AjaxController" verb="*" path="*Controller.ashx" type="BS.Common.handler.AjaxController, Larco" />
-      <add name="AjaxDownloadHandler" verb="*" path="*Handler.ashx" type="BS.Common.handler.AjaxDownloadHandler, Larco" />
+      <add name="AjaxController" verb="*" path="*Controller.ashx" type="EPE.Common.handler.AjaxController, Larco" />
+      <add name="AjaxDownloadHandler" verb="*" path="*Handler.ashx" type="EPE.Common.handler.AjaxDownloadHandler, Larco" />
     </handlers>
     <security>
       <requestFiltering>
