--- a/Larco/Web.config
+++ b/Larco/Web.config
@@ -37,13 +37,13 @@
   <appSettings>
     <add key="AjaxBasePkg" value="BS.Larco.Ajax" />
     <add key="LarcoDAO" value="BS.Larco.Dao.Sql.LarcoSqlDAO, Larco" />
-    <add key="IPageInfoDAO" value="EPE.Common.Dao.Cache.PageCacheDAO, EPEFramework" />
+    <add key="IPageInfoDAO" value="EPE.Common.Dao.Service.PageInfoServiceDAO, EPEFramework" />
     <add key="ICatalogDAO" value="EPE.Common.Dao.Cache.CatalogCacheDAO, EPEFramework" />
     <add key="CatalogCacheTables" value="tblClientes,tblProductos" />
     <add key="PageInfo" value="BS.Larco.Ajax.PageInfo, Larco" />
     <add key="EPEFrameworkAppName" value="Larco" />
         
-    <add key="QueryHelper" value="EPE.Common.Ajax.QueryHelper, EPEFramework" />
+    <add key="QueryHelper" value="BS.Larco.Ajax.QueryHelper, Larco" />
     <add key="Users" value="BS.Larco.Ajax.Users, Larco" />
   </appSettings>
   <system.serviceModel>
