--- a/Larco/Web.config
+++ b/Larco/Web.config
@@ -9,7 +9,7 @@
   </connectionStrings>
   <loggingConfiguration name="Logging Application Block" tracingEnabled="true" defaultCategory="System" logWarningsWhenNoCategoriesMatch="true">
     <listeners>
-      <add fileName="D:\\Temp\\Logs\\Larco.txt" header="" footer="" formatter="CSV Formatter" listenerDataType="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.FlatFileTraceListenerData, Microsoft.Practices.EnterpriseLibrary.Logging, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" traceOutputOptions="None" filter="All" type="Microsoft.Practices.EnterpriseLibrary.Logging.TraceListeners.FlatFileTraceListener, Microsoft.Practices.EnterpriseLibrary.Logging, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" name="Trace File Trace Listener" />
+      <add fileName="D:\\Temp\\Logs\\Larco2.txt" header="" footer="" formatter="CSV Formatter" listenerDataType="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.FlatFileTraceListenerData, Microsoft.Practices.EnterpriseLibrary.Logging, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" traceOutputOptions="None" filter="All" type="Microsoft.Practices.EnterpriseLibrary.Logging.TraceListeners.FlatFileTraceListener, Microsoft.Practices.EnterpriseLibrary.Logging, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" name="Trace File Trace Listener" />
     </listeners>
     <formatters>
       <add template="{timestamp(local:MM/dd/yyyy HH:mm:ss.fffffff)}|{category}|{priority}|{message}|{eventid}|{severity}|{title}|{machine}|{dictionary({value})}|{win32ThreadId}|{activity}" type="Microsoft.Practices.EnterpriseLibrary.Logging.Formatters.TextFormatter, Microsoft.Practices.EnterpriseLibrary.Logging, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" name="CSV Formatter" />
@@ -76,6 +76,13 @@
     <httpRuntime maxUrlLength="40960" maxQueryStringLength="2097151" maxRequestLength="40960" />
     <sessionState mode="InProc" timeout="20"></sessionState>
   </system.web>
+  <location path="TV/Screen.aspx">
+    <system.web>
+      <authorization>
+        <allow users="*"/>
+      </authorization>
+    </system.web>
+  </location>  
   <system.web.extensions>
     <scripting>
       <webServices>
