--- a/Larco/Web.config
+++ b/Larco/Web.config
@@ -79,7 +79,14 @@
   <location path="TV/Screen.aspx">
     <system.web>
       <authorization>
-        <allow users="*"/>
+        <allow users="*" />
+      </authorization>
+    </system.web>
+  </location>
+  <location path="AjaxController.ashx">
+    <system.web>
+      <authorization>
+        <allow users="*" />
       </authorization>
     </system.web>
   </location>  
