--- a/Larco/packages.config
+++ b/Larco/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.4.1.9004" targetFramework="net40" />
+  <package id="EPEFramework" version="4.0.2" targetFramework="net40" />
   <package id="EPEFrameworkUI" version="3.6.0" targetFramework="net40" />
   <package id="iTextSharp" version="5.5.13" targetFramework="net40" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net40" />
